# proper-gator

./: .gitignore  README.rst  pyproject.toml
proper_gator/: authentication.py  cli.py  containers.py  proper_gator.py  service.py  tags.py  triggers.py  variables.py  workspaces.py
tests/: test_proper_gator.py
