[tool.poetry]
name = "proper-gator"
version = "0.1.0"
description = ""
authors = ["Colin Burr <cburr@industrydive.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.7.0"

[tool.poetry.scripts]
proper_gator = "proper_gator.cli:main"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
